# otters-rt

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
resources/test/: lpf.json  phaser.json  pitch_shift.json  sample_config.json  vocoder_bypass.json
src/: conf.rs  consts.rs  context.rs  errors.rs  factory.rs  ffi.rs  lib.rs  otters.rs  otters_runner.rs  param.rs  traits.rs
src/effects/: biquad_filter.rs  bypass.rs  dynamics.rs  mod.rs  vocoder2.rs
src/effects/delay/: basic_delay.rs  mod.rs
src/effects/misc_vocoder/: mod.rs  robotize.rs  whisper.rs
src/effects/modulation/: mod.rs  modulated_delay.rs  phaser.rs
src/effects/nonlinear/: bitcrusher.rs  mod.rs  waveshaping.rs
src/effects/pitch/: mod.rs  ocean.rs
src/effects/reverb/: apf.rs  comb.rs  mod.rs
src/test/: mod.rs  otters_test.rs
src/utils/: biquad.rs  buf_rw.rs  delay_buf.rs  envelope.rs  fast_rand.rs  lfo.rs  mathutils.rs  mod.rs  ringbuf.rs
src/utils/arch/: arm.rs  generic.rs
src/utils/async_utils/: mod.rs  queue.rs
support/: math_neon.h
